# esp8266-hello

./: .gitmodules  Cargo.toml  Makefile  README.org  bindgen.sh  build.sh  setenv.sh
.cargo/: config
esp8266-sys/src/: bindings.h  bindings.rs  lib.rs
main/: hello_world_main.c
src/: main.rs
