[package]
name = "esp8266-hello"
version = "0.1.0"
edition = "2018"

[dependencies]
esp8266-sys = { path = "esp8266-sys" }

[profile.dev]
lto = false 
incremental = false
debug = false # debug adds frame pointers - which must be omitted
codegen-units = 1

# [profile.release]
# lto = false
# incremental = false
# debug = false # debug adds frame pointers - which must be omitted
# codegen-units = 1
